<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="com.example.lenovo.aprendiendo2.MainActivity">

    <Button
        android:id="@+id/linearV"
        android:text="@string/txt1"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>


    <Button
        android:id="@+id/linerH"
        android:text="@string/txt2"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/relative"
        android:text="@string/txt3"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/table"
        android:text="@string/txt4"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/frame"
        android:text="@string/txt5"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/list"
        android:text="@string/txt6"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>
    <Button
        android:id="@+id/grid"
        android:text="@string/txt7"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

</LinearLayout>
